# Iosh__Calculator

./: .gitignore  Cargo.toml  README.md  READTASK.md  RELEASE_NOTES.md  clippy.toml  config.json
.github/workflows/: release.yml
FRO-calculator-v0.1.0/: README.md
configurate/: user.json
configurate/docs/: README.en.md  README.ru.md
console/: .gitignore  Cargo.toml  README.md  build.rs  config.json  package-lock.json
console/src/: in_out.rs  main.rs  messege.rs  panic_hook.rs  parser.lalrpop
console/src/calculator/: ast.rs  interpreter.rs  result.rs
console/src/printer/: calc.rs  color.rs  help.rs  mod.rs  table.rs
console/tests/: test_interpreter.rs  test_parser.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs
core/src/lexer/: parser.lalrpop
core/tests/: test_interpreter.rs  test_parser.rs
crates/console/: Cargo.toml  build.rs
crates/console/src/: in_out.rs  main.rs  panic_hook.rs
crates/console/src/printer/: calc.rs  help.rs  mod.rs  table.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/tests/: test_interpreter.rs  test_parser.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: config.rs  history.rs  interpreter.rs
crates/interpreter/src/ast/: expr.rs  func.rs  func_name.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs  select_docs.rs  select_user_settings.rs  settings.rs
i_calc/: Cargo.toml
i_calc/src/: ast.rs  constante.rs  errors.rs  interpreter.rs  lib.rs
i_calc/src/ast/: expr.rs  func.rs  func_name.rs  mod.rs  opcode.rs  operation.rs
interface/: Cargo.toml  package-lock.json  package.json
interface/backend/: Cargo.toml  tauri.conf.json
interface/frontend/: package-lock.json  package.json  svelte.config.js
interface/frontend/src-tauri/: Cargo.toml  tauri.conf.json
interface/frontend/src-tauri/src/: main.rs
interface/frontend/src/lib/components/: InputLabel.svelte
interface/frontend/src/routes/: +page.svelte
interface/src/: main.rs
interpreter/: Cargo.toml
interpreter/src/: config.rs  constante.rs  errors.rs  history.rs  interpreter.rs  lib.rs  traits.rs  variable.rs
interpreter/src/ast/: calc.rs  expr.rs  func.rs  func_name.rs  mod.rs  opcode.rs  operation.rs
launcher/src/: main.rs
resources/docs/: README.en.md  README.ru.md  manifest.json
src/: config.rs  in_out.rs  io.rs  lib.rs  lip.rs  main.rs  parser.lalrpop  printer.rs  reader_file.rs
src/calculator/: ast.rs  interpreter.rs  mod.rs  result.rs
src/parser/: block.rs  function.rs  function_standart.rs  indentifier.rs  mod.rs  parser.rs
src/printer/: calc.rs  help.rs  mod.rs  table.rs
tests/: test_interpreter.rs  test_parser.rs
utils/: Cargo.toml
utils/src/: config.rs  lib.rs
