[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

build = "build.rs" # LALRPOP preprocessing


[dependencies]
interpreter = { path = "../interpreter" }

libc = "0.2.80"

lalrpop-util = {version="0.20.0", features = ["lexer"]}
regex = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

lazy_static = "1.4"

crossterm = "0.26.1"

[build-dependencies]
lalrpop = "0.20.0"
