[package]
name = "core"
version = "0.1.0"
edition = "2021"


[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
interpreter = { path = "../interpreter"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

lazy_static = "1.4"


[build-dependencies]
lalrpop = "0.20.0"
