[package]
name = "core"
description = "The application is core calculator"
authors = ["Ivenin Valentin <iveninvala7@gmail.com>"]
repository = "https://github.com/IOSHED/Iosh__Calculator/"
readme = "../README.md"
version = "1.0.0"
edition = "2021"
license = "MIT"


[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
interpreter = { path = "../interpreter"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

lazy_static = "1.4"

rust_decimal = "1.37.1"


[build-dependencies]
lalrpop = "0.20.0"
