[package]
name = "interface"
description = "The application is calculator with UI/UX"
authors = ["Ivenin Valentin <iveninvala7@gmail.com>"]
repository = "https://github.com/IOSHED/Iosh__Calculator/"
readme = "../README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "fro-calculator"

[dependencies]
iced = "0.13.1"
