[package]
name = "interpreter"
description = "The application generating AST and containing the AST execution logic"
authors = ["Ivenin Valentin <iveninvala7@gmail.com>"]
repository = "https://github.com/IOSHED/Iosh__Calculator/"
readme = "../README.md"
version = "1.0.0"
edition = "2021"
license = "MIT"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.40"
