[package]
name = "interpreter"
description = "The application generating AST and containing the AST execution logic"
authors = ["Ivenin Valentin <iveninvala7@gmail.com>"]
repository = "https://github.com/IOSHED/Iosh__Calculator/"
version = "0.1.3"
edition = "2021"
license = "MIT"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
rust_decimal = "1.37.1"
