[package]
name = "app"
version = "0.1.0"
default-run = "app"
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }


[features]
custom-protocol = [ "tauri/custom-protocol" ]
